--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <Button
-        android:id="@+id/btnShowApp"
+    <TextView
+        android:id="@+id/tvShowApp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
+        android:layout_marginTop="8dp"
+        android:textSize="20sp"
         android:paddingStart="8dp"
         android:text="Upcoming Appointments"
         android:textAlignment="viewStart"
@@ -28,13 +28,14 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnShowApp"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvShowApp"/>
 
-    <Button
-        android:id="@+id/btnShowMap"
+    <TextView
+        android:id="@+id/tvShowMap"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textSize="20sp"
         android:text="Disease Map"
         android:background="@android:color/transparent"
         android:paddingStart="8dp"
@@ -50,9 +51,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnShowMap" />
+        app:layout_constraintTop_toBottomOf="@+id/tvShowMap" />
 </androidx.constraintlayout.widget.ConstraintLayout>
