--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registration">
+    tools:context=".Registration"
+    android:background="@drawable/gradient_background">
 
     <TextView
         android:id="@+id/textView2"
@@ -13,9 +14,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
-        android:text="Online Hospital"
+        android:text="@string/app_name"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Register"
+        android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Have an account already? Login"
-        android:textColor="#03A9F4"
+        android:textColor="#FAFAFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -51,6 +55,11 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Full Name"
+        android:background="@drawable/et_round_corners"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +74,11 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Email"
+        android:background="@drawable/et_round_corners"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +93,11 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Password"
+        android:background="@drawable/et_round_corners"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -94,6 +113,11 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Confirm Password"
+        android:background="@drawable/et_round_corners"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,6 +129,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Register"
+        android:textColor="#EEE"
+        android:background="@drawable/button_transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +145,11 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Age"
+        android:background="@drawable/et_round_corners"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:inputType="number"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,6 +163,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:spinnerMode="dropdown"
+        android:background="@drawable/et_round_corners"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="-2dp"
+        android:paddingTop="-2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/etConfirmPass" />
@@ -150,7 +186,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:buttonTint="#000000"
+        android:buttonTint="#FFFFFF"
+        android:textColor="#FFF"
         android:text="Detect Location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
