--- a/app/src/main/res/layout/doctor_list_item.xml
+++ b/app/src/main/res/layout/doctor_list_item.xml
@@ -24,33 +24,36 @@
             android:layout_height="match_parent" >
 
             <TextView
+                android:id="@+id/tvDoctorName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
                 android:layout_marginStart="4dp"
-                android:id="@+id/tvDoctorName"
+                android:layout_marginTop="4dp"
                 android:text="Doctor"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/tvDoctorExp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvDoctorExp"
-                android:text="5 years"
                 android:layout_below="@+id/tvDoctorName"
-                android:layout_marginTop="4dp"
                 android:layout_marginStart="4dp"
-                android:layout_marginBottom="4dp" />
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:text="5 years"
+                android:textColor="#000000" />
 
             <TextView
+                android:id="@+id/tvDoctorRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvDoctorRating"
                 android:layout_alignParentRight="true"
-                android:text="3.5/5"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"
-                android:textSize="18sp"/>
+                android:text="3.5/5"
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
