--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.HomeFragment"
+    android:background="#EEEEEE">
 
     <TextView
         android:id="@+id/tvShowApp"
@@ -14,6 +15,7 @@
         android:textSize="20sp"
         android:paddingStart="8dp"
         android:text="Upcoming Appointments"
+        android:textColor="#000"
         android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +41,7 @@
         android:text="Disease Map"
         android:background="@android:color/transparent"
         android:paddingStart="8dp"
+        android:textColor="#000"
         android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
