--- a/app/src/main/res/layout/live_appointment_card.xml
+++ b/app/src/main/res/layout/live_appointment_card.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        app:cardCornerRadius="6dp"
+        app:cardCornerRadius="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
                 android:layout_height="36dp"
                 android:id="@+id/btnEditAppointment"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/ic_baseline_edit_24"
+                android:background="@drawable/ic_play"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"/>
 
